@@ -254,6 +254,15 @@ function db_connect_real($device, $user, $pass, $db_name, $db_type = 'mysql', $p
 	return false;
 }
 
+/**
+ * db_check_reconnect - Check the database connection.  If the connection is gone
+ *  attempt to reconnect, otherwise return the connection
+ *
+ * @param bool|object  The connection to check
+ * @param bool         Wether or not to log the connection check
+ *
+ * @return bool        The database true is the database is connected else false
+ */
 function db_check_reconnect(object|false $db_conn = false, $log = true) {
 	global $config, $database_details;
 
@@ -343,7 +352,7 @@ function db_check_reconnect(object|false $db_conn = false, $log = true) {
 		db_close();
 
 		// Connect to the database server
-		db_connect_real(
+		$cnn_id = db_connect_real(
 			$database_hostname,
 			$database_username,
 			$database_password,
@@ -358,6 +367,14 @@ function db_check_reconnect(object|false $db_conn = false, $log = true) {
 			$database_ssl_capath,
 			$database_ssl_verify_server_cert
 		);
+
+		if ($cnn_id !== false) {
+			return true;
+		} else {
+			return false;
+		}
+	} else {
+		return true;
 	}
 }
 
